--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,6 @@ dependencies {
 	implementation 'commons-fileupload:commons-fileupload:1.3.2'
 }
 
-tasks.named('myapp','test','sample') {
-	useJUnitPlatform()
-}
+// tasks.named('myapp','test','sample') {
+// 	useJUnitPlatform()
+// }
